:bug: Fixed Height bug on mobile responsive

--- a/SCSS/yellow.scss
+++ b/SCSS/yellow.scss
@@ -598,7 +598,6 @@ body{
     }
 
     @include desktop-responsive(medium){
-        height: 100vh;
         
         .main-img{
             width: 400px;
@@ -611,5 +610,9 @@ body{
 
     @include desktop-responsive(mobile){
         display: none;
+    }
+
+    @include nesthub-responsive(nesthub){
+        height: 100%;
     }
 }
